cabal-version:      3.0
name:               liblearn
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Nicolas Audinet de Pieuchon
maintainer:         nic.audinet27@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable liblearn
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        liblearn
      , base ^>=4.18.2.1
      , control-monad-omega
      , QuickCheck

    hs-source-dirs:   exe
    default-language: Haskell2010
