cabal-version:      3.0
name:               liblearn
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Nicolas Audinet de Pieuchon
maintainer:         nic.audinet27@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import: warnings
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        DSL
      , Part1
      , Part2
      , Part3
    build-depends:
        base ^>=4.18.2.1
      , containers
      , gnuplot
      , mwc-random
      , random
      , QuickCheck
      , weighted-search

executable liblearn
    import: warnings
    default-language: Haskell2010
    hs-source-dirs: exe
    main-is: Main.hs
    build-depends:
        liblearn
      , base ^>=4.18.2.1
      , containers
      , control-monad-omega
      , gnuplot
      , mwc-random
      , random
      , QuickCheck
      , weighted-search
